# clank.sh

./: .gitignore  AGENTS.md  Cargo.toml  DEMO.md  DEV_SDK_CHANGES.md  README.md  TESTING.md  USAGE.md  WASM_CHANGES.md  clippy.toml  deny.toml  golem.yaml  rustfmt.toml
.github/workflows/: conformance.yml
crates/clank-agent/: Cargo.toml
crates/clank-agent/src/: agent_invoker.rs  ask_provider.rs  clank_agent.rs  golem_cluster.rs  lib.rs  log_sink.rs  mcp_http.rs
crates/clank-cli/: Cargo.toml
crates/clank-conformance/: Cargo.toml
crates/clank-conformance/scenarios/: README.md  authz-compound.clank  authz-confirm-all.clank  authz-sudoonly-rm.clank  bg-jobs.clank  command-substitution.clank  curl-pipeline-decline.clank  curl-pipeline.clank  cwd-lifecycle.clank  dev-null.clank  durability-state.clank  echo-printf.clank  eval-while-pending.clank  exec.clank  exit-codes-misc.clank  export-secret.clank  file-management.clank  find-xargs.clank  fs-bootstrap.clank  grep-flags.clank  help-intercepts.clank  help-simple-builtins.clank  heredoc-keepalive.clank  heredocs-uu-consumers.clank  heredocs.clank  nested-contexts.clank  path-resolution.clank  pipeline-exit-codes.clank  pipelines-uu-consumers.clank  pipelines.clank  prompt-choices.clank  prompt-user-basic.clank  quoting-edges.clank  redirects.clank  sed-awk.clank  stream-fidelity.clank  text-tools.clank  type-unknown.clank  unknown-command-wasm.clank  unknown-command.clank
crates/clank-conformance/src/: harness.rs  lib.rs  matcher.rs  scenario.rs
crates/clank-conformance/src/backend/: golem.rs  mod.rs  native.rs
crates/clank-conformance/tests/: golem.rs  native.rs
crates/clank-core/: Cargo.toml
crates/clank-core/examples/: grease-fixture.rs
crates/clank-core/src/: authz.rs  lib.rs  logging.rs  main.rs  manifest.rs  native.rs  registry.rs
crates/clank-core/src/ai/: anthropic_native.rs  ask.rs  config.rs  llm_native.rs  mod.rs  model.rs  openai_native.rs
crates/clank-core/src/builtins/: context.rs  helpshim.rs  http.rs  promptuser.rs  secretenv.rs  typecmd.rs
crates/clank-core/src/golem/: agent.rs  cluster.rs  config_native.rs  mod.rs  rest_native.rs
crates/clank-core/src/grease/: cmd.rs  config.rs  mod.rs  pkg.rs  state.rs
crates/clank-core/src/mcp/: client.rs  cmd.rs  config.rs  http_native.rs  mod.rs  state.rs
crates/clank-core/src/runtime/: binfs.rs  dynreg.rs  mcpfs.rs  mod.rs  process.rs  procfs.rs  proctable.rs  ps.rs  secretenv.rs  sysprompt.rs
crates/clank-core/src/session/: agent.rs  ask.rs  grease.rs  mcp.rs  mod.rs  prompt.rs  tests.rs
crates/clank-core/src/tools/: awk.rs  coreutils.rs  find.rs  man.rs  mod.rs  stat.rs  texttools.rs  which.rs
crates/clank-embed/: Cargo.toml
crates/clank-embed/src/: agent_invoker.rs  ask_provider.rs  golem_cluster.rs  lib.rs  mcp_http.rs  shell.rs  wire.rs
crates/clank-shell/: Cargo.toml
crates/clank-shell/examples/: grease-fixture.rs
crates/clank-shell/src/: agentcmd.rs  askcmd.rs  authz.rs  awkcmd.rs  binfs.rs  contextcmd.rs  coreutils.rs  dynreg.rs  findcmd.rs  golemcmd.rs  greasecmd.rs  greaseconfig.rs  greasepkg.rs  greasestate.rs  httpcmd.rs  interceptstub.rs  killcmd.rs  lib.rs  logging.rs  main.rs  mancmd.rs  manifest.rs  mcpclient.rs  mcpcmd.rs  mcpconfig.rs  mcpfs.rs  mcpstate.rs  modelcmd.rs  native.rs  process.rs  procfs.rs  proctable.rs  promptuser.rs  ps.rs  registry.rs  session.rs  statcmd.rs  sysprompt.rs  texttools.rs  typecmd.rs  (+3 more)
crates/clank-shell/src/ai/: anthropic_native.rs  anthropic_wire.rs  ask.rs  config.rs  mod.rs  model.rs
crates/clank-shell/src/builtins/: context.rs  http.rs  interceptstub.rs  mod.rs  promptuser.rs  secretenv.rs  typecmd.rs
crates/clank-shell/src/golem/: config_native.rs  mod.rs  rest_native.rs
crates/clank-shell/src/grease/: pkg.rs  state.rs
crates/clank-shell/src/mcp/: cmd.rs  config.rs  http_native.rs  mod.rs  state.rs
crates/clank-shell/src/runtime/: mod.rs  process.rs  procfs.rs  proctable.rs  ps.rs  secretenv.rs
crates/clank-shell/src/session/: agent.rs  ask.rs  grease.rs  mcp.rs  mod.rs  prompt.rs  tests.rs
crates/clank-shell/src/tools/: coreutils.rs  find.rs  man.rs  stat.rs  texttools.rs  xargs.rs
crates/grease-tool/: Cargo.toml
crates/grease-tool/src/: main.rs
crates/greeter-agent/: Cargo.toml
crates/greeter-agent/src/: lib.rs
crates/waget/: Cargo.toml
crates/waget/src/: lib.rs  main.rs  parse.rs
crates/wcurl/: Cargo.toml  README.md
crates/wcurl/src/: lib.rs  main.rs  parse.rs
crates/whttp/: Cargo.toml
crates/whttp/src/: lib.rs
dev-docs/designs/proposed/: clank-golem-agent.md  dual-target-shell-loop.md
dev-docs/issues/open/: clank-golem-agent.md  dual-target-shell-loop.md  shell-owned-virtual-filesystem.md
dev-docs/plans/proposed/: clank-golem-agent.md  dual-target-shell-loop.md
dev-tools/grease-tool/: Cargo.toml  README.md
dev-tools/grease-tool/samples/agent/: greeter.md
dev-tools/grease-tool/samples/mcp/: deepwiki.md
dev-tools/grease-tool/samples/prompt/: summarize.md
dev-tools/grease-tool/samples/script/: greet.sh
dev-tools/grease-tool/samples/skill/code-reviewing/: SKILL.md  checklist.sh
dev-tools/grease-tool/src/: main.rs
docs/: DEMO.md  USAGE.md  WASM_CHANGES.md
docs/audit/: AUDIT.md  RESTRUCTURE.md  VERIFY.md
fixtures/greeter-agent/: Cargo.toml
fixtures/greeter-agent/src/: lib.rs
golem-native-testing/: GOLEM-CONNECT.md  probe.sh  setup.sh  teardown.sh
scripts/: clank-repl.sh  conformance-golem.sh  golem-e2e.sh  golem-probe.sh
utilities/waget/src/: lib.rs  main.rs  parse.rs
utilities/wcurl/: Cargo.toml
utilities/wcurl/src/: lib.rs  main.rs  parse.rs
utilities/whttp/: Cargo.toml
utilities/whttp/src/: lib.rs
