[workspace]
resolver = "2"
members = ["crates/clank-shell", "crates/clank-agent", "crates/wcurl", "crates/waget"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/clank-sh/clank.sh"

[workspace.dependencies]
wasip3 = "0.7"
wit-bindgen = { version = "0.57", default-features = false, features = ["async"] }
futures = "0.3"

# uucore's upstream 0.9.0 fails to build on wasm32-wasip2 (uses the unstable `wasip2` std
# feature). Our fork adds a stable encoded-bytes shim. This redirects every transitive uucore
# (via the uu_* coreutils crates) to the patched fork on both targets.
[patch.crates-io]
# The coreutils fork carries wasip2 fixes: a stable OsStr encoded-bytes shim + empty-argv guard in
# uucore, and a wasi `set_permissions` skip in uu_cp. Patch uucore AND every uu_* command crate
# clank registers — the published uu_* crates only share the patched `uucore`, so a fix inside a
# command crate (e.g. cp) is only picked up when that command crate itself comes from the fork.
uucore = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_cat = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_ls = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_wc = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_head = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_sort = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_mkdir = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_rm = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_mv = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_cp = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_env = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_cut = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_tr = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_uniq = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_tail = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_tee = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_touch = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
uu_sleep = { git = "https://github.com/Aditya1404Sal/coreutils", branch = "wasip2-oscompat" }
# Published brush-core 0.5.0 stores redirect targets as `OpenFile::File(std::fs::File)` and clones
# them via `File::try_clone()`, which is Unsupported on wasm32-wasip2 — so `echo > file` silently
# discards the write. Upstream `main` refactored `OpenFile::File` to `Arc<File>` (clone = `Arc::clone`,
# no syscall), which fixes file redirects on wasip2, but that fix isn't on crates.io yet.
#
# The `wall-c-wasm-pipes` branch builds on that fix (branched from 0300a84) and adds wasm32 pipeline
# support ("Wall C"): std::io::pipe() is unsupported on wasip2 and there's no blocking thread pool, so
# on wasm we use an in-memory `OpenFile::Stream`-backed pipe and run owned-shell builtin stages inline
# to completion in pipeline order (each upstream stage drops its writer → clean EOF for the next),
# instead of OS pipes + tokio::spawn_blocking. Native behavior is unchanged. See memory
# wall-c-pipe-concurrency-path. Pin all three brush crates (one monorepo; lockstep) to the exact commit.
brush-core = { git = "https://github.com/Aditya1404Sal/brush", rev = "a235544" }
brush-builtins = { git = "https://github.com/Aditya1404Sal/brush", rev = "a235544" }
brush-parser = { git = "https://github.com/Aditya1404Sal/brush", rev = "a235544" }
