[workspace]
resolver = "2"
members = ["crates/clank-core", "crates/clank-cli", "crates/clank-agent", "crates/clank-conformance", "crates/whttp", "crates/wcurl", "crates/waget", "crates/grease-tool", "fixtures/greeter-agent"]
# default-members excludes the two wasm-only component crates, so a bare native `cargo build`
# is green: greeter-agent is an e2e fixture (the second implementer of the embed surface), and
# clank-agent's cdylib links only for wasm32-wasip2 (its golem/wasi host imports are undefined
# natively — the link has never succeeded on native). `--workspace`, explicit `-p`, and the
# golem deploy path still build both for wasm.
default-members = ["crates/clank-core", "crates/clank-cli", "crates/clank-conformance", "crates/whttp", "crates/wcurl", "crates/waget", "crates/grease-tool"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/clank-sh/clank.sh"

[workspace.dependencies]
wasip3 = "0.7"
wit-bindgen = { version = "0.57", default-features = false, features = ["async"] }
futures = "0.3"

# Workspace-wide lints (audit C1, full set). Every member opts in via `[lints] workspace = true`.
# Warn-level only: these surface debt on every build without breaking it; burn down over time.
[workspace.lints.rust]
unsafe_code = "warn"     # not "forbid": clank has ~7 real SAFETY-documented unsafe blocks
unreachable_pub = "warn" # surfaces the pub-vs-pub(crate) gap (audit C3); tighten after R1 settles
missing_docs = "warn"    # clank-core is a real library (rlib consumed by agent/conformance)

[workspace.lints.clippy]
# Groups sit at lower priority so the individual lints below always win (cargo's required form).
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn" # the highest-value lint for THIS codebase — ~470 non-test unwrap/expect sites
expect_used = "warn"

# uucore's upstream 0.9.0 fails to build on wasm32-wasip2 (uses the unstable `wasip2` std
# feature). Our fork adds a stable encoded-bytes shim. This redirects every transitive uucore
# (via the uu_* coreutils crates) to the patched fork on both targets.
[patch.crates-io]
# The coreutils fork carries wasip2 fixes: a stable OsStr encoded-bytes shim + empty-argv guard in
# uucore, and a wasi `set_permissions` skip in uu_cp. Patch uucore AND every uu_* command crate
# clank registers — the published uu_* crates only share the patched `uucore`, so a fix inside a
# command crate (e.g. cp) is only picked up when that command crate itself comes from the fork.
# Pinned to an exact REV (not the `wasip2-oscompat` branch) so the build is reproducible from source
# control alone — a branch pin silently advances to branch-tip on a fresh resolve (audit P2-7). Bump
# deliberately when the fork moves; mirror the fork so a delete/force-push can't break the build.
uucore = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_cat = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_ls = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_wc = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_head = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_sort = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_mkdir = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_rm = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_mv = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_cp = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_env = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_cut = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_tr = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_uniq = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_tail = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_tee = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_touch = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_sleep = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
uu_printf = { git = "https://github.com/Aditya1404Sal/coreutils", rev = "35ecf24" }
# Published brush-core 0.5.0 stores redirect targets as `OpenFile::File(std::fs::File)` and clones
# them via `File::try_clone()`, which is Unsupported on wasm32-wasip2 — so `echo > file` silently
# discards the write. Upstream `main` refactored `OpenFile::File` to `Arc<File>` (clone = `Arc::clone`,
# no syscall), which fixes file redirects on wasip2, but that fix isn't on crates.io yet.
#
# The `std-utils` branch (stacked on `wall-c-wasm-pipes`, branched from 0300a84) carries the wasm32
# changes: std::io::pipe() is unsupported on wasip2 and there's no blocking thread pool, so on wasm
# both pipelines ("Wall C") AND command substitution `$(...)` AND here-documents/here-strings
# (`<<EOF`/`<<<`) use an in-memory `OpenFile::Stream`-backed pipe with inline-sequential execution
# (the producer completes and drops its writer → clean EOF for the reader) instead of OS pipes +
# tokio::spawn/spawn_blocking. Native behavior is unchanged. See memory wall-c-pipe-concurrency-path.
# Pin all three brush crates (one monorepo; lockstep) to the exact commit.
brush-core = { git = "https://github.com/Aditya1404Sal/brush", rev = "02de798" }
brush-builtins = { git = "https://github.com/Aditya1404Sal/brush", rev = "02de798" }
brush-parser = { git = "https://github.com/Aditya1404Sal/brush", rev = "02de798" }
