[package]
name = "clank-agent"
version = "0.0.0"
edition = "2024"
license.workspace = true
repository.workspace = true
publish = false

[lib]
# The Golem agent component. cdylib only — this crate is a leaf component, not a library.
crate-type = ["cdylib"]

[dependencies]
# SPIKE (spike/dev-golem-sdk): repointed from crates.io golem-rust 2.1.0 to the dev SDK in the golem
# clone at golem-stuff/golem, to test building clank on the newer golem:agent@2.0.0 world. Throwaway.
# The clone is a nested git repo (its own remotes; carries our `agent stream` connect patch) and is
# gitignored by clank (/golem-stuff/) — that is correct and does NOT put its history at risk: committed
# work there lives in the clone's own git and is pushed to the fork. See DEV_SDK_CHANGES.md.
golem-rust = { path = "../../golem-stuff/golem/sdks/rust/golem-rust", features = ["export_golem_agentic"] }
wstd = { version = "=0.6.5", features = ["default", "json"] }
serde = { version = "1", features = ["derive"] }

# The shared shell core (Session + Transcript). default-features=false drops clank-shell's
# `repl-driver` feature, so it links as a plain rlib WITHOUT the `wasi:cli/run` export that would
# clash with this crate's golem:agent world.
clank-shell = { path = "../clank-shell", default-features = false }
# SPIKE: dropped. `^0.5.1` resolves to golem-ai-llm 0.5.2, which hard-pins golem-rust "=2.1.0" — an
# EXACT pin, so it cannot coexist with the dev SDK (and `[patch]` can't override an exact pin either).
# `ask` is NOT stubbed: ask_provider.rs now calls Anthropic directly over wstd (durability comes from
# the oplog recording that HTTP call). See DEV_SDK_CHANGES.md §4.
# golem-ai-llm = "0.5.1"
# golem-ai-llm-anthropic = "0.5.1"
async-trait = "0.1"
