[package]
name = "clank-agent"
version = "0.0.0"
edition = "2024"
license.workspace = true
repository.workspace = true
publish = false

[lib]
# The Golem agent component. cdylib only — this crate is a leaf component, not a library.
crate-type = ["cdylib"]

[dependencies]
# main-rc-1 (the golem 1.6 track): golem-rust comes from the dev SDK in the golem clone at
# golem-stuff/golem — the newer golem:agent@2.0.0 world this branch targets. Repoint to the
# published golem-rust once a 1.6-compatible release exists.
# The clone is a nested git repo (its own remotes; carries our `agent stream` connect patch) and is
# gitignored by clank (/golem-stuff/) — that is correct and does NOT put its history at risk: committed
# work there lives in the clone's own git and is pushed to the fork. See DEV_SDK_CHANGES.md.
#
# `export_golem_agentic` is enabled HERE (the leaf component), not in clank-embed — that feature
# compiles the SDK's own `Component` export, which a component must carry exactly once.
golem-rust = { path = "/Users/adityasalunkhe/Desktop/clank.sh/golem-stuff/golem/sdks/rust/golem-rust", features = ["export_golem_agentic"] }

# Everything else — the shell engine (Session), the EvalResult wire types, and the five durable
# provider implementations (ask/mcp/agent-invoker/cluster/log-sink) — comes from clank-embed, the
# same crate any third-party Golem agent uses to embed the shell. This crate is deliberately the
# thinnest possible consumer of it: the trait, the impl, three delegations.
clank-embed = { path = "../clank-embed", features = ["providers"] }
