[package]
name = "clank-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# The native `clank` binary (R1): a thin entrypoint over the clank-core engine. Splitting it out
# keeps clank-core a pure rlib — the binary/library entanglement was the last reason clank-core
# carried a bin target. The wasm entrypoint is clank-agent (the Golem component), not this crate.
[[bin]]
name = "clank"
path = "src/main.rs"

[dependencies]
# The engine. default-features = false drops `repl-driver` (the wasm `wasi:cli/run` driver) the
# same way every other native consumer does — it enables nothing on native targets.
clank-core = { path = "../clank-core", default-features = false }

# `main` builds the multi-thread runtime itself (Runtime::new — I/O + time drivers, which Brush
# needs to spawn external processes) and block_on's the async shell loop.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
