[package]
name = "clank-shell"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
# cdylib → the wasm component; rlib → linked by the native `clank` binary.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "clank"
path = "src/main.rs"

# All-target deps: Brush (the shell interpreter) now runs on both native and wasm. `nix` is
# gated under cfg(unix) inside brush-core, so the wasm32-wasip2 build still pulls zero nix.
# tokio provides the runtime brush requires for its internal async (current-thread on wasm).
[dependencies]
brush-core = "0.5"
brush-builtins = "0.2"
tokio = { version = "1", features = ["rt"] }
diffy = { version = "0.5", features = ["std"] }
grep = "0.4"
infer = "0.19"
jaq-core = "3.1"
jaq-json = "2.0"
jaq-std = "3.0"
regex = "1"
similar = "2.7"
# Internal coreutils (uutils), registered as clank builtins. uucore is patched for wasm32-wasip2
# via [patch.crates-io] in the workspace root.
uu_cat = "0.9"
uu_ls = "0.9"
uu_wc = "0.9"
uu_head = "0.9"
uu_sort = "0.9"
uu_mkdir = "0.9"

# Wasm-only: the p3 component bindings and stream I/O.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasip3.workspace = true
wit-bindgen.workspace = true
futures.workspace = true

# Native-only: a multi-thread tokio runtime (Runtime::new) and temp-file output capture.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tempfile = "3"
# For redirecting fd 1/2 around uutils' uumain (which writes to std stdout) so its output is
# captured by brush's fd table (pipes, redirects, the transcript capture).
libc = "0.2"
