[package]
name = "greeter-agent"
version = "0.0.0"
edition = "2024"
license.workspace = true
repository.workspace = true
publish = false

[lib]
# A minimal second Golem agent, deployed alongside clank:agent purely to prove grease-installed
# agent invocation (wRPC through WasmRpcInvoker) round-trips end-to-end. cdylib = leaf component.
crate-type = ["cdylib"]

[dependencies]
# `export_golem_agentic` makes the #[agent_definition]/#[agent_implementation] macros emit the
# invocable component exports (the golem:agent world). Nothing else is needed for a String→String agent.
# SPIKE (spike/dev-golem-sdk): repointed from crates.io golem-rust 2.1.0 to the dev SDK in the golem
# clone, in lockstep with clank-agent — greeter is the wRPC *target*, so it must speak the same
# golem:agent@2.0.0 world as the invoker calling it. See DEV_SDK_CHANGES.md.
golem-rust = { path = "../../golem-stuff/golem/sdks/rust/golem-rust", features = ["export_golem_agentic"] }
