[package]
name = "waget"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

# Both a library (embedded by clank-shell and any other wasm component) and a standalone CLI binary.
[lib]
path = "src/lib.rs"

[[bin]]
name = "waget"
path = "src/main.rs"

[dependencies]
# `http::Method` in the parsed request; `whttp` is the shared cfg-gated transport (wstd/reqwest)
# plus redirect following + timeouts, so waget only parses flags and formats output.
http = "1"
whttp = { path = "../whttp" }

# wasm: wstd supplies the standalone bin's `block_on` (the WASI-HTTP reactor). The library's HTTP
# lives in whttp; this dep is only the bin's runtime.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wstd = { version = "=0.6.5", features = ["default", "json"] }

# native: tokio gives the standalone bin a runtime. (reqwest moved to whttp.)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
